# cli/go/api.go
@@ -1,0 +1,41 @@
+// Package api provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.6.0 DO NOT EDIT.
+package api
+
+// Error defines model for Error.
+type Error struct {
+	Error string `json:"error"`
+}
+
+// Info defines model for Info.
+type Info struct {
+	Agents   []string `json:"agents"`
+	Runtimes []string `json:"runtimes"`
+	Version  string   `json:"version"`
+}
+
+// Workspace defines model for Workspace.
+type Workspace struct {
+	Agent   *string        `json:"agent,omitempty"`
+	Id      string         `json:"id"`
+	Name    string         `json:"name"`
+	Paths   WorkspacePaths `json:"paths"`
+	Project *string        `json:"project,omitempty"`
+}
+
+// WorkspaceId defines model for WorkspaceId.
+type WorkspaceId struct {
+	Id string `json:"id"`
+}
+
+// WorkspacePaths defines model for WorkspacePaths.
+type WorkspacePaths struct {
+	Configuration string `json:"configuration"`
+	Source        string `json:"source"`
+}
+
+// WorkspacesList defines model for WorkspacesList.
+type WorkspacesList struct {
+	Items []Workspace `json:"items"`
+}
